--- a/style.css
+++ b/style.css
@@ -28,9 +28,10 @@ h2 {
 }
 
 .hero img {
-  width: 100%;
+  width: 50%;
   height: 100%;
   object-fit: cover;
+  display: flex;
   filter: grayscale(20%) brightness(80%);
 }
 
